--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,9 +11,13 @@
   "type": "module",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.7.3"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.3",
+    "validator": "^13.7.0"
   }
 }
