--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@windmill/react-ui": "^0.6.0",
     "axios": "^1.2.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
@@ -23,6 +24,7 @@
     "react-tradingview-widget": "^1.3.2",
     "react-ts-tradingview-widgets": "^1.0.12",
     "recharts": "^2.1.16",
+    "sass": "^1.56.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
