--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-gauge-chart": "^0.4.1",
     "react-pro-sidebar": "^1.0.0-alpha.7",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "react-tradingview-widget": "^1.3.2",
